--- a/Bits32/BlackPill/comUSB/ComUSBlack.ioc
+++ b/Bits32/BlackPill/comUSB/ComUSBlack.ioc
@@ -1,12 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_6
-ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_7
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_7
+ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_8
 ADC1.DiscontinuousConvMode=DISABLE
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversion,DiscontinuousConvMode
 ADC1.NbrOfConversion=8
@@ -19,14 +19,14 @@ ADC1.Rank-4\#ChannelRegularConversion=5
 ADC1.Rank-5\#ChannelRegularConversion=6
 ADC1.Rank-6\#ChannelRegularConversion=7
 ADC1.Rank-7\#ChannelRegularConversion=8
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.ScanConvMode=ENABLE
 ADC1.master=1
 CAD.formats=
@@ -52,14 +52,15 @@ Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA5
 Mcu.Pin11=PA6
 Mcu.Pin12=PA7
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM11_VS_ClockSourceINT
-Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin13=PB0
+Mcu.Pin14=PA11
+Mcu.Pin15=PA12
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA0-WKUP
@@ -67,7 +68,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=20
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -110,6 +111,7 @@ PA6.Locked=true
 PA6.Signal=ADCx_IN6
 PA7.Locked=true
 PA7.Signal=ADCx_IN7
+PB0.Signal=ADCx_IN8
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=LED[BUILTIN]
 PC13-ANTI_TAMP.Locked=true
@@ -184,7 +186,7 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1562500
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=150000000
-SH.ADCx_IN0.0=ADC1_IN0,IN0
+SH.ADCx_IN0.0=ADC1_IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
@@ -200,6 +202,8 @@ SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.ConfNb=1
 SH.ADCx_IN7.0=ADC1_IN7,IN7
 SH.ADCx_IN7.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8
+SH.ADCx_IN8.ConfNb=1
 TIM11.IPParameters=Period,Prescaler
 TIM11.Period=60000
 TIM11.Prescaler=16
