--- a/Bits32/BlackPill/comUSB/ComUSBlack.ioc
+++ b/Bits32/BlackPill/comUSB/ComUSBlack.ioc
@@ -41,33 +41,34 @@ Mcu.IP0=ADC1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM11
-Mcu.IP5=USB_DEVICE
-Mcu.IP6=USB_OTG_FS
-Mcu.IPNb=7
+Mcu.IP4=TIM10
+Mcu.IP5=TIM11
+Mcu.IP6=USB_DEVICE
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PB0
-Mcu.Pin14=PA11
-Mcu.Pin15=PA12
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB0
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin19=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA4
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
 Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -87,8 +88,6 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.Locked=true
-PA0-WKUP.Signal=ADCx_IN0
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
 PA11.Mode=Device_Only
@@ -186,8 +185,6 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1562500
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=150000000
-SH.ADCx_IN0.0=ADC1_IN0
-SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.ADCx_IN2.0=ADC1_IN2,IN2
@@ -204,6 +201,8 @@ SH.ADCx_IN7.0=ADC1_IN7,IN7
 SH.ADCx_IN7.ConfNb=1
 SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.ADCx_IN8.ConfNb=1
+TIM10.IPParameters=Period
+TIM10.Period=23999
 TIM11.IPParameters=Period,Prescaler
 TIM11.Period=60000
 TIM11.Prescaler=16
@@ -217,6 +216,8 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
