motor funciona correcametne solo falta cambiar velocidad

--- a/Bits32/BluePill/ADCTEST/ADCtest2025.ioc
+++ b/Bits32/BluePill/ADCTEST/ADCtest2025.ioc
@@ -67,13 +67,15 @@ Mcu.Pin13=PA11
 Mcu.Pin14=PA12
 Mcu.Pin15=PA13
 Mcu.Pin16=PA14
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin24=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
@@ -81,12 +83,12 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=23
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=6.14.0
-MxDb.Version=DB.6.0.140
+MxCube.Version=6.14.1
+MxDb.Version=DB.6.0.141
 NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -127,6 +129,14 @@ PA6.Locked=true
 PA6.Signal=ADCx_IN6
 PA7.Locked=true
 PA7.Signal=ADCx_IN7
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=Engine1-1
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=Engine1-2
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=Engine2
 PB6.Signal=S_TIM4_CH1
